Fix dropdown overflow bug.

--- a/frontend/src/components/ui/Card.module.css
+++ b/frontend/src/components/ui/Card.module.css
@@ -5,8 +5,8 @@
   width: 100%;
   min-width: 300px;
   max-width: 700px;
-  max-height: 80vh;
-  overflow-y: auto;
+  /* max-height: 80vh; */
+  /* overflow-y: auto; */
   z-index: 5;
   margin-bottom: 5%;
   }
